--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 version: "3"
 services:
-    linux:
-        build: 
-            context: .
-            dockerfile: Dockerfile
-        # user: "${UID}:${GID}"
-        image: linux:1.0
-        container_name: linux
-        working_dir: /home/leo
-        hostname: linux-environment
-        restart: unless-stopped
-        # command: bash -c "sleep infinity"
-        volumes:
-            - ./workspace:/home/leo/workspace
-        privileged: false
-        cap_add:
-            - NET_ADMIN
-        ports:
-            - "22222:22"
-        environment:
-            - EDITOR=vim
-        
+  linux:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - LINUX_USER=${LINUX_USER}
+    # user: "${UID}:${GID}"
+    image: linux:1.0
+    container_name: linux
+    working_dir: /home/${LINUX_USER}
+    hostname: linux-environment
+    restart: unless-stopped
+    environment:
+      - EDITOR=vim
+    # command: bash -c "sleep infinity"
+    volumes:
+      - ./workspace:/home/${LINUX_USER}/workspace
+      - ${HOME}/.ssh:/home/${LINUX_USER}/.ssh
+    privileged: false
+    cap_add:
+      - NET_ADMIN
+    ports:
+      - "22222:22"
 
