[FEATURE] store jupyter setting out of container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     volumes:
       - ${WORKSPACE}:/home/${ML_USER}/workspace
       - ./ml/conda_envs:/opt/conda/envs
+      - ./ml/.jupyter:/root/.jupyter
     deploy:
       resources:
         reservations:
