[FEATURE] add conda init to dockerfile & update ml image to 1.1

--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -26,6 +26,7 @@ RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86
 
 # Put conda in path so we can use conda activate
 ENV PATH=$CONDA_DIR/bin:$PATH
+RUN conda init bash
 
 # /var/run/sshd: required on ubuntu
 RUN mkdir /var/run/sshd
